--- a/experiments/exp2025_03_11_all_uttrs_present/exp2025_03_11_all_uttrs_present/tests.ipynb
+++ b/experiments/exp2025_03_11_all_uttrs_present/exp2025_03_11_all_uttrs_present/tests.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/peshkichev/miniconda3/envs/py311/lib/python3.11/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from dialogue2graph.metrics.no_llm_metrics import all_utterances_present, dialogues_are_valid_paths\n",
+    "from dialogue2graph.metrics.no_llm_metrics import match_triplets_dg, are_paths_valid\n",
     "from dialogue2graph.metrics.llm_metrics import compare_graphs\n",
     "from dialogue2graph.pipelines.core.graph import Graph\n",
     "from dialogue2graph.pipelines.core.dialogue import Dialogue"
@@ -79,127 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 'Responding to DMs on Instagram/Facebook._1_0',\n",
-       "  'messages': [{'participant': 'assistant',\n",
-       "    'text': 'Hi there! How can I assist you today?'},\n",
-       "   {'participant': 'user', 'text': 'I want to place an order.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Great! What product are you interested in?'},\n",
-       "   {'participant': 'user', 'text': 'I’d like a t-shirt.'},\n",
-       "   {'participant': 'assistant', 'text': 'What size would you like?'},\n",
-       "   {'participant': 'user', 'text': 'Medium, please.'},\n",
-       "   {'participant': 'assistant', 'text': 'Would you like that in red or blue?'},\n",
-       "   {'participant': 'user', 'text': 'Red, please.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Perfect! Can I have your shipping address?'},\n",
-       "   {'participant': 'user', 'text': 'Sure, it’s 123 Main St.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Thank you! Your order has been placed. Is there anything else I can help you with?'},\n",
-       "   {'participant': 'user', 'text': 'Actually, can I change my order?'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Of course! What would you like to change?'},\n",
-       "   {'participant': 'user', 'text': 'I want a large size.'},\n",
-       "   {'participant': 'assistant', 'text': 'What size would you like?'},\n",
-       "   {'participant': 'user', 'text': 'Medium, please.'},\n",
-       "   {'participant': 'assistant', 'text': 'Would you like that in red or blue?'},\n",
-       "   {'participant': 'user', 'text': 'Red, please.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Perfect! Can I have your shipping address?'},\n",
-       "   {'participant': 'user', 'text': 'Sure, it’s 123 Main St.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Thank you! Your order has been placed. Is there anything else I can help you with?'},\n",
-       "   {'participant': 'user', 'text': \"No, that's all. Thank you.\"},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Alright, feel free to reach out anytime. Have a great day!'}]},\n",
-       " {'id': 'Responding to DMs on Instagram/Facebook._1_1',\n",
-       "  'messages': [{'participant': 'assistant',\n",
-       "    'text': 'Hi there! How can I assist you today?'},\n",
-       "   {'participant': 'user', 'text': 'I want to place an order.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Great! What product are you interested in?'},\n",
-       "   {'participant': 'user', 'text': 'I’d like a t-shirt.'},\n",
-       "   {'participant': 'assistant', 'text': 'What size would you like?'},\n",
-       "   {'participant': 'user', 'text': 'Medium, please.'},\n",
-       "   {'participant': 'assistant', 'text': 'Would you like that in red or blue?'},\n",
-       "   {'participant': 'user', 'text': 'Red, please.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Perfect! Can I have your shipping address?'},\n",
-       "   {'participant': 'user', 'text': 'Sure, it’s 123 Main St.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Thank you! Your order has been placed. Is there anything else I can help you with?'},\n",
-       "   {'participant': 'user', 'text': 'Actually, I need to modify my order.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Of course! What would you like to change?'},\n",
-       "   {'participant': 'user', 'text': 'I want a large size.'},\n",
-       "   {'participant': 'assistant', 'text': 'What size would you like?'},\n",
-       "   {'participant': 'user', 'text': 'Medium, please.'},\n",
-       "   {'participant': 'assistant', 'text': 'Would you like that in red or blue?'},\n",
-       "   {'participant': 'user', 'text': 'Red, please.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Perfect! Can I have your shipping address?'},\n",
-       "   {'participant': 'user', 'text': 'Sure, it’s 123 Main St.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Thank you! Your order has been placed. Is there anything else I can help you with?'},\n",
-       "   {'participant': 'user', 'text': \"No, that's all. Thank you.\"},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Alright, feel free to reach out anytime. Have a great day!'}]},\n",
-       " {'id': 'Responding to DMs on Instagram/Facebook._1_2',\n",
-       "  'messages': [{'participant': 'assistant',\n",
-       "    'text': 'Hi there! How can I assist you today?'},\n",
-       "   {'participant': 'user', 'text': 'I want to place an order.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Great! What product are you interested in?'},\n",
-       "   {'participant': 'user', 'text': 'I’d like a t-shirt.'},\n",
-       "   {'participant': 'assistant', 'text': 'What size would you like?'},\n",
-       "   {'participant': 'user', 'text': 'Medium, please.'},\n",
-       "   {'participant': 'assistant', 'text': 'Would you like that in red or blue?'},\n",
-       "   {'participant': 'user', 'text': 'Actually, can I change my product?'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Great! What product are you interested in?'},\n",
-       "   {'participant': 'user', 'text': 'I’d like a t-shirt.'},\n",
-       "   {'participant': 'assistant', 'text': 'What size would you like?'},\n",
-       "   {'participant': 'user', 'text': 'Medium, please.'},\n",
-       "   {'participant': 'assistant', 'text': 'Would you like that in red or blue?'},\n",
-       "   {'participant': 'user', 'text': 'Red, please.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Perfect! Can I have your shipping address?'},\n",
-       "   {'participant': 'user', 'text': 'Sure, it’s 123 Main St.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Thank you! Your order has been placed. Is there anything else I can help you with?'},\n",
-       "   {'participant': 'user', 'text': \"No, that's all. Thank you.\"},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Alright, feel free to reach out anytime. Have a great day!'}]},\n",
-       " {'id': 'Responding to DMs on Instagram/Facebook._1_3',\n",
-       "  'messages': [{'participant': 'assistant',\n",
-       "    'text': 'Hi there! How can I assist you today?'},\n",
-       "   {'participant': 'user', 'text': \"I'd like some product information.\"},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Of course! Our products include t-shirts, hoodies, and caps. How can I help you?'}]},\n",
-       " {'id': 'Responding to DMs on Instagram/Facebook._1_4',\n",
-       "  'messages': [{'participant': 'assistant',\n",
-       "    'text': 'Hi there! How can I assist you today?'},\n",
-       "   {'participant': 'user', 'text': \"I'd like some product information.\"},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Sure! We offer t-shirts, hoodies, and caps. What would you like to know?'}]},\n",
-       " {'id': 'Responding to DMs on Instagram/Facebook._1_5',\n",
-       "  'messages': [{'participant': 'assistant',\n",
-       "    'text': 'Hi there! How can I assist you today?'},\n",
-       "   {'participant': 'user', 'text': 'Never mind, thanks.'},\n",
-       "   {'participant': 'assistant',\n",
-       "    'text': 'Alright, feel free to reach out anytime. Have a great day!'}]}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset['train'][0]['dialogues']"
    ]
@@ -215,80 +88,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dialogue(messages=[DialogueMessage(text='Hi there! How can I assist you today?', participant='assistant'), DialogueMessage(text='I want to place an order.', participant='user'), DialogueMessage(text='Great! What product are you interested in?', participant='assistant'), DialogueMessage(text='I’d like a t-shirt.', participant='user'), DialogueMessage(text='What size would you like?', participant='assistant'), DialogueMessage(text='Medium, please.', participant='user'), DialogueMessage(text='Would you like that in red or blue?', participant='assistant'), DialogueMessage(text='Red, please.', participant='user'), DialogueMessage(text='Perfect! Can I have your shipping address?', participant='assistant'), DialogueMessage(text='Sure, it’s 123 Main St.', participant='user'), DialogueMessage(text='Thank you! Your order has been placed. Is there anything else I can help you with?', participant='assistant'), DialogueMessage(text='Actually, can I change my order?', participant='user'), DialogueMessage(text='Of course! What would you like to change?', participant='assistant'), DialogueMessage(text='I want a large size.', participant='user'), DialogueMessage(text='What size would you like?', participant='assistant'), DialogueMessage(text='Medium, please.', participant='user'), DialogueMessage(text='Would you like that in red or blue?', participant='assistant'), DialogueMessage(text='Red, please.', participant='user'), DialogueMessage(text='Perfect! Can I have your shipping address?', participant='assistant'), DialogueMessage(text='Sure, it’s 123 Main St.', participant='user'), DialogueMessage(text='Thank you! Your order has been placed. Is there anything else I can help you with?', participant='assistant'), DialogueMessage(text=\"No, that's all. Thank you.\", participant='user'), DialogueMessage(text='Alright, feel free to reach out anytime. Have a great day!', participant='assistant')], id='Responding to DMs on Instagram/Facebook._1_0', topic='', validate=True)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dialogues[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph has all the dialogues\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_utterances_present(Graph(data['graph']),dialogues)"
+    "match_triplets_dg(Graph(data['graph']),dialogues)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_0'},\n",
-       " {'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_1'},\n",
-       " {'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_2'},\n",
-       " {'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_3'},\n",
-       " {'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_4'},\n",
-       " {'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_5'}]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dialogues_are_valid_paths(Graph(data['graph']),dialogues)"
+    "are_paths_valid(Graph(data['graph']),dialogues)"
    ]
   },
   {
@@ -304,110 +126,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "absent in graph:  set()\n",
-      "absent in dialogues:  {'i want to cancel my order.'}\n",
-      "Graph has all the dialogues\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_utterances_present(Graph(data['graph']),dialogues)"
+    "match_triplets_dg(Graph(data['graph']),dialogues)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'source': 1, 'target': 2, 'utterances': ['I want to place an order.']}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data['graph']['edges'].pop(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "absent in graph:  {'i want to place an order.'}\n",
-      "absent in dialogues:  {'i want to cancel my order.'}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_utterances_present(Graph(data['graph']),dialogues)"
+    "match_triplets_dg(Graph(data['graph']),dialogues)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'value': False,\n",
-       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue Responding to DMs on Instagram/Facebook._1_0\"},\n",
-       " {'value': False,\n",
-       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue Responding to DMs on Instagram/Facebook._1_1\"},\n",
-       " {'value': False,\n",
-       "  'description': \"graph has no connection between next pairs [('Hi there! How can I assist you today?', 'I want to place an order.'), ('I want to place an order.', 'Great! What product are you interested in?')] from Dialogue Responding to DMs on Instagram/Facebook._1_2\"},\n",
-       " {'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_3'},\n",
-       " {'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_4'},\n",
-       " {'value': True,\n",
-       "  'description': 'graph has all paths from Dialogue Responding to DMs on Instagram/Facebook._1_5'}]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dialogues_are_valid_paths(Graph(data['graph']),dialogues)"
+    "are_paths_valid(Graph(data['graph']),dialogues)"
    ]
   },
   {
@@ -421,20 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'value': False, 'description': 'Numbers of nodes do not match: 9 != 8'}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "compare_graphs(Graph(data['graph']),Graph(data_2['graph']))"
    ]
