old experimemts added

--- a/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
+++ b/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
    "outputs": [],
    "source": [
     "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerator\n",
-    "from three_stages_0 import ThreeStagesGraphGenerator\n",
-    "from three_stages_graph_generation import ThreeStagesGraphGenerator as GrouperGenerator"
+    "from three_stages_llm import ThreeStagesGraphGenerator\n",
+    "from three_stages_algo import ThreeStagesGraphGenerator as AlgoGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,18 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "generation_model = ChatOpenAI(model=\"chatgpt-4o-latest\", api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL, temperature=1)\n",
     "theme_validation_model = ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL, temperature=0)\n",
-    "validation_model = ChatOpenAI(model=\"gpt-4o-mini\", api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL, temperature=0)"
+    "validation_model = ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=env_settings.OPENAI_API_KEY, base_url=env_settings.OPENAI_BASE_URL, temperature=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,16 +143,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph"
+    "graph[0]['graph']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph[0]['graph']"
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('book_table.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(graph[0], f, ensure_ascii=False, indent=4)"
    ]
   },
   {
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,6 +289,23 @@
     "   'label': 'confirm_restaurant',\n",
     "   'is_start': False,\n",
     "   'utterances': ['Great choice! You’d like to book a table at {restaurant_name}, correct?']}]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph has all the dialogues\n"
+     ]
+    }
+   ],
+   "source": [
+    "dias = sampler.invoke(graph_c,5)"
    ]
   },
   {
@@ -414,11 +441,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grouper_generator = GrouperGenerator()"
+    "algo_generator = AlgoGenerator()"
    ]
   },
   {
@@ -427,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_graph = grouper_generator.invoke(dias, model_name=\"gpt-4o\", temp=0)"
+    "res_graph = algo_generator.invoke(dias, model_name=\"gpt-4o\", temp=0)"
    ]
   },
   {
@@ -538,7 +565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_graph = grouper_generator.invoke(dias, model_name=\"gpt-4o\", temp=0)"
+    "res_graph = algo_generator.invoke(dias, model_name=\"gpt-4o\", temp=0)"
    ]
   },
   {
@@ -610,7 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_graph = grouper_generator.invoke(dias, model_name=\"gpt-4o\", temp=0)"
+    "res_graph = algo_generator.invoke(dias, model_name=\"gpt-4o\", temp=0)"
    ]
   },
   {
