--- a/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
+++ b/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
@@ -143,7 +143,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph[0]['graph']"
+    "graph = topic_generator.invoke(\"arranging airport transfers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Graph(graph[0]['graph']).visualise_short(\"transfer\")"
    ]
   },
   {
@@ -157,21 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('book_table.json', 'w', encoding='utf-8') as f:\n",
+    "with open('transfer.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(graph[0], f, ensure_ascii=False, indent=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph[0]['dialogues'][0]"
    ]
   },
   {
@@ -309,29 +309,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Planar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_c.visualise_short(\"Graph\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Graphviz"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -441,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,11 +427,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_graph = algo_generator.invoke(dias, model_name=\"gpt-4o\", temp=0)"
+    "from dialogue2graph.pipelines.core.dialogue import Dialogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dialogues = [Dialogue().from_list(seq['messages']) for seq in graph[0]['dialogues']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:chromadb.telemetry.product.posthog:Anonymized telemetry enabled. See                     https://docs.trychroma.com/telemetry for more information.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LISTS_N:  [(0, ['I need to book a ride to the airport.', 'Can you help me arrange an airport transfer?']), (1, ['My flight is on Saturday at 10 AM from JFK.', 'Departure is from LAX tomorrow at 6 PM.', 'Do you have any other options?', 'Can I just take a taxi instead?', \"Never mind, I'll figure it out myself.\", 'Actually, I changed my mind. Thanks anyway.']), (2, ['Pickup is from my home in Brooklyn.', \"I'd like to be picked up from my hotel.\", 'Actually, I need to change my pickup location.', 'Hold on, pickup should be from my office instead.']), (3, [\"It's just me traveling.\", 'There will be three of us.']), (4, ['Actually, can I change my vehicle type?', 'A sedan would be fine.', 'I think an SUV would be more comfortable.', 'Wait, I think I need a bigger car.']), (5, ['On second thought, my original choice is fine.', 'You know what? Never mind changing it.', 'A van would be better.', \"I'll go with an SUV instead.\"]), (6, [\"No, that's it! Thanks a lot.\", \"Thanks, I'm all set.\"]), (7, ['']), (8, ['']), (9, [\"No, that's it! Thanks a lot.\", \"Thanks, I'm all set.\"]), (10, ['Actually, forget it. The first location is fine.', 'Never mind, keep the original pickup.', 'Pickup should be from 456 Elm Street.', 'I need pickup from Grand Hotel instead.']), (11, [\"No, I'll manage on my own.\", 'Actually, never mind.', 'Yeah, that sounds good.', 'Sure, show me the options.']), (12, ['Okay, have a great day!', 'Alright, thanks anyway.']), (13, ['Okay, have a great day!', 'Alright, thanks anyway.']), (14, [\"Thanks, I'll book it myself.\", 'Alright, that helps!'])]\n",
+      "LISTS:  [(0, 'Hey there! How can I help you today?'), (1, 'Sure! I can help with that. When is your flight, and where are you departing from?'), (2, 'Got it. Where should the driver pick you up?'), (3, 'Thanks! How many passengers will be traveling?'), (4, 'Alright! Do you have any preference for the type of vehicle? We have sedans, SUVs, and vans available.'), (5, 'Of course! What type of vehicle would you prefer instead?'), (6, 'All set! Your driver will arrive on time. Let me know if you need anything else.'), (7, 'Glad to help! Safe travels.'), (8, \"You're welcome! Have a fantastic trip!\"), (9, 'Great! Your airport transfer is booked. You’ll receive a confirmation message soon. Anything else I can do for you?'), (10, 'No problem! Where would you like to change your pickup location to?'), (11, \"If you'd prefer, I can send you options for ride-share services instead. Would you like that?\"), (12, 'Alright, let me know if you need help later. Have a great day!'), (13, 'No worries! Feel free to reach out anytime.'), (14, 'Here are some ride-share options: Uber and Lyft have availability at your time. You can book directly from their apps. Let me know if I can assist further.')]\n",
+      "NODES:  [['Alright, let me know if you need help later. Have a great day!', 'No worries! Feel free to reach out anytime.'], [\"You're welcome! Have a fantastic trip!\", 'Glad to help! Safe travels.'], ['Great! Your airport transfer is booked. You’ll receive a confirmation message soon. Anything else I can do for you?', 'All set! Your driver will arrive on time. Let me know if you need anything else.'], ['Hey there! How can I help you today?'], ['Sure! I can help with that. When is your flight, and where are you departing from?'], ['Got it. Where should the driver pick you up?'], ['Thanks! How many passengers will be traveling?'], ['Alright! Do you have any preference for the type of vehicle? We have sedans, SUVs, and vans available.'], ['Of course! What type of vehicle would you prefer instead?'], ['No problem! Where would you like to change your pickup location to?'], [\"If you'd prefer, I can send you options for ride-share services instead. Would you like that?\"], ['Here are some ride-share options: Uber and Lyft have availability at your time. You can book directly from their apps. Let me know if I can assist further.']]\n",
+      "NODES:  [{'id': 1, 'label': '', 'is_start': False, 'utterances': ['Alright, let me know if you need help later. Have a great day!', 'No worries! Feel free to reach out anytime.']}, {'id': 2, 'label': '', 'is_start': False, 'utterances': [\"You're welcome! Have a fantastic trip!\", 'Glad to help! Safe travels.']}, {'id': 3, 'label': '', 'is_start': False, 'utterances': ['Great! Your airport transfer is booked. You’ll receive a confirmation message soon. Anything else I can do for you?', 'All set! Your driver will arrive on time. Let me know if you need anything else.']}, {'id': 4, 'label': '', 'is_start': True, 'utterances': ['Hey there! How can I help you today?']}, {'id': 5, 'label': '', 'is_start': False, 'utterances': ['Sure! I can help with that. When is your flight, and where are you departing from?']}, {'id': 6, 'label': '', 'is_start': False, 'utterances': ['Got it. Where should the driver pick you up?']}, {'id': 7, 'label': '', 'is_start': False, 'utterances': ['Thanks! How many passengers will be traveling?']}, {'id': 8, 'label': '', 'is_start': False, 'utterances': ['Alright! Do you have any preference for the type of vehicle? We have sedans, SUVs, and vans available.']}, {'id': 9, 'label': '', 'is_start': False, 'utterances': ['Of course! What type of vehicle would you prefer instead?']}, {'id': 10, 'label': '', 'is_start': False, 'utterances': ['No problem! Where would you like to change your pickup location to?']}, {'id': 11, 'label': '', 'is_start': False, 'utterances': [\"If you'd prefer, I can send you options for ride-share services instead. Would you like that?\"]}, {'id': 12, 'label': '', 'is_start': False, 'utterances': ['Here are some ride-share options: Uber and Lyft have availability at your time. You can book directly from their apps. Let me know if I can assist further.']}]\n",
+      "RESULT:  {'edges': [{'source': 3, 'target': 2, 'utterances': [\"no, that's it! thanks a lot.\", \"thanks, i'm all set.\"]}, {'source': 8, 'target': 3, 'utterances': ['a sedan would be fine.', 'i think an suv would be more comfortable.']}, {'source': 9, 'target': 8, 'utterances': ['on second thought, my original choice is fine.', 'you know what? never mind changing it.']}, {'source': 8, 'target': 9, 'utterances': ['actually, can i change my vehicle type?', 'wait, i think i need a bigger car.']}, {'source': 7, 'target': 8, 'utterances': [\"it's just me traveling.\", 'there will be three of us.']}, {'source': 6, 'target': 7, 'utterances': ['pickup is from my home in brooklyn.', \"i'd like to be picked up from my hotel.\"]}, {'source': 5, 'target': 6, 'utterances': ['my flight is on saturday at 10 am from jfk.', 'departure is from lax tomorrow at 6 pm.']}, {'source': 4, 'target': 5, 'utterances': ['i need to book a ride to the airport.', 'can you help me arrange an airport transfer?']}, {'source': 10, 'target': 6, 'utterances': ['actually, forget it. the first location is fine.', 'never mind, keep the original pickup.']}, {'source': 6, 'target': 10, 'utterances': ['actually, i need to change my pickup location.', 'hold on, pickup should be from my office instead.']}, {'source': 9, 'target': 3, 'utterances': ['a van would be better.', \"i'll go with an suv instead.\"]}, {'source': 10, 'target': 7, 'utterances': ['pickup should be from 456 elm street.', 'i need pickup from grand hotel instead.']}, {'source': 1, 'target': 2, 'utterances': ['okay, have a great day!', 'alright, thanks anyway.']}, {'source': 11, 'target': 1, 'utterances': [\"no, i'll manage on my own.\", 'actually, never mind.']}, {'source': 5, 'target': 11, 'utterances': ['do you have any other options?', 'can i just take a taxi instead?']}, {'source': 12, 'target': 2, 'utterances': [\"thanks, i'll book it myself.\", 'alright, that helps!']}, {'source': 11, 'target': 12, 'utterances': ['yeah, that sounds good.', 'sure, show me the options.']}, {'source': 5, 'target': 1, 'utterances': [\"never mind, i'll figure it out myself.\", 'actually, i changed my mind. thanks anyway.']}], 'nodes': [{'id': 1, 'label': '', 'is_start': False, 'utterances': ['Alright, let me know if you need help later. Have a great day!', 'No worries! Feel free to reach out anytime.']}, {'id': 2, 'label': '', 'is_start': False, 'utterances': [\"You're welcome! Have a fantastic trip!\", 'Glad to help! Safe travels.']}, {'id': 3, 'label': '', 'is_start': False, 'utterances': ['Great! Your airport transfer is booked. You’ll receive a confirmation message soon. Anything else I can do for you?', 'All set! Your driver will arrive on time. Let me know if you need anything else.']}, {'id': 4, 'label': '', 'is_start': True, 'utterances': ['Hey there! How can I help you today?']}, {'id': 5, 'label': '', 'is_start': False, 'utterances': ['Sure! I can help with that. When is your flight, and where are you departing from?']}, {'id': 6, 'label': '', 'is_start': False, 'utterances': ['Got it. Where should the driver pick you up?']}, {'id': 7, 'label': '', 'is_start': False, 'utterances': ['Thanks! How many passengers will be traveling?']}, {'id': 8, 'label': '', 'is_start': False, 'utterances': ['Alright! Do you have any preference for the type of vehicle? We have sedans, SUVs, and vans available.']}, {'id': 9, 'label': '', 'is_start': False, 'utterances': ['Of course! What type of vehicle would you prefer instead?']}, {'id': 10, 'label': '', 'is_start': False, 'utterances': ['No problem! Where would you like to change your pickup location to?']}, {'id': 11, 'label': '', 'is_start': False, 'utterances': [\"If you'd prefer, I can send you options for ride-share services instead. Would you like that?\"]}, {'id': 12, 'label': '', 'is_start': False, 'utterances': ['Here are some ride-share options: Uber and Lyft have availability at your time. You can book directly from their apps. Let me know if I can assist further.']}]} \n",
+      "\n",
+      "SKIP\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_graph = algo_generator.invoke(dialogues, model_name=\"gpt-4o\", temp=0)"
    ]
   },
   {
@@ -468,11 +484,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sentence_transformers.SentenceTransformer:Load pretrained SentenceTransformer: BAAI/bge-m3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d81beb4ceb94dd79fadd52268722922",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "163286c246924a58b88f98ac0d234edd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa0cebdd44ae4ee6b156811f4975f88a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33bbab88d4c945a7b91e8da373623bf0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'value': True,\n",
+       " 'description': 'Nodes similarity: 0.9866758584976196, Nodes+edges similarity: 0.9464239478111267'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "compare_graphs(res_graph,graph_c)"
+    "compare_graphs(res_graph,Graph(graph[0]['graph']))"
    ]
   },
   {
