update: exp2025_03_17_sample_graph_incrementation

--- a/experiments/exp2025_03_17_sample_graph_incrementation/exp2025_03_17_sample_graph_incrementation/graph_incrementation.ipynb
+++ b/experiments/exp2025_03_17_sample_graph_incrementation/exp2025_03_17_sample_graph_incrementation/graph_incrementation.ipynb
@@ -669,43 +669,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "new_data = []\n",
-    "\n",
-    "for id, example in enumerate(generated_24[:5]):\n",
-    "    # new example\n",
-    "    dialogues = example['dialogues']\n",
-    "    example['incremental'] = {}\n",
-    "    for i in range(len(dialogues)):\n",
-    "        example['incremental'].setdefault(f'graph_{i}')\n",
-    "\n",
-    "    # Generation of the 1st graph\n",
-    "    first_dialogue = Dialogue.from_list(dialogues[0]['messages'])\n",
-    "    first_graph = graph_generator.invoke([first_dialogue])\n",
-    "    example['incremental']['graph_0'] = first_graph.graph_dict\n",
-    "    with open(f\"../data/gen24_graphid{id}_incrementation.json\", \"w\", encoding=\"utf-8\") as file:\n",
-    "        json.dump(example, file, indent=4, sort_keys=True)\n",
-    "\n",
-    "    # graph incrementation\n",
-    "    for i in range(len(dialogues)):\n",
-    "        if i == 0:\n",
-    "            result_graph = Graph(example['incremental']['graph_0'])\n",
-    "        else:\n",
-    "            new_dialogue = Dialogue.from_list(dialogues[i]['messages'])\n",
-    "            try:\n",
-    "                result_graph = graph_generator_llm.invoke([new_dialogue], result_graph)\n",
-    "                example['incremental'][f'graph_{i}'] = result_graph.graph_dict\n",
-    "\n",
-    "                with open(f\"../data/gen24_graphid{id}_incrementation.json\", \"w\", encoding=\"utf-8\") as file:\n",
-    "                    json.dump(example, file, indent=4, sort_keys=True)\n",
-    "\n",
-    "            except Exception as e:\n",
-    "                raise e\n",
-    "    new_data.append(example)"
+    "Вывод: Качество генерации на первых 5 графах из generated_24 не идеальное: визуализации эталонного и последнего сгенерированного графов различаются во всех случаях, метрики хорошие в 2 случаях из 5 (6 и 9 диалогов соответственно). Для генерации использована модель o3-mini без указания температуры."
    ]
   }
  ],
