--- a/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_chatgpt-4o-latest.ipynb
+++ b/experiments/exp2025_03_12_rec_models_incrementation/exp2025_03_12_rec_models_incrementation/exp_with_chatgpt-4o-latest.ipynb
@@ -23,52 +23,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chatsky_llm_autoconfig.settings import EnvSettings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'chatgpt-4o-latest'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from settings import EnvSettings\n",
     "env_settings = EnvSettings()\n",
     "env_settings.GENERATION_MODEL_NAME"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/olshevskaya/miniconda3/envs/conda_env_py311/lib/python3.11/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from chatsky_llm_autoconfig.graph import Graph\n",
-    "from chatsky_llm_autoconfig.dialogue import Dialogue\n",
-    "import json"
+    "import os\n",
+    "os.environ['PATH_TO_ENV'] = \"~/projects/chatsky-llm-autoconfig/.env\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from dialogue2graph.pipelines.core.dialogue import Dialogue\n",
+    "from dialogue2graph.pipelines.core.graph import Graph\n",
+    "from dialogue2graph.metrics.automatic_metrics import is_same_structure, triplet_match"
    ]
   },
   {
@@ -82,8 +65,7 @@
     "from three_stages_0i import ThreeStagesGraphGenerator as GeneratorI0\n",
     "from append_chain import AppendChain\n",
     "\n",
-    "from chatsky_llm_autoconfig.metrics.automatic_metrics import is_same_structure, triplet_match, compare_graphs\n",
-    "graph_generator = Generator(\"o1-mini\") # To generate 1st graph from one dialogue\n",
+    "graph_generator = Generator(\"o3-mini\") # To generate 1st graph from one dialogue\n",
     "graph_generator_llm_emb = GeneratorI() # To add dialogue to existing graph: adding nodes with LLM and edges with embedder\n",
     "graph_generator_llm = GeneratorI0() # To add dialogue to existing graph with LLM\n",
     "graph_generator_llm_2 = AppendChain() # To add (append) dialogue to existing graph with LLM (the second approach)"
