update: metrics dependencies

--- a/experiments/exp2025_03_17_sample_graph_incrementation/exp2025_03_17_sample_graph_incrementation/graph_incrementation.ipynb
+++ b/experiments/exp2025_03_17_sample_graph_incrementation/exp2025_03_17_sample_graph_incrementation/graph_incrementation.ipynb
@@ -83,7 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.metrics.automatic_metrics import is_same_structure, triplet_match_accuracy"
+    "# from dialogue2graph.metrics.automatic_metrics import is_same_structure, triplet_match_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dialogue2graph.metrics.no_llm_metrics.metrics import is_same_structure"
    ]
   },
   {
