--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,22 +13,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain_community.embeddings import HuggingFaceEmbeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/peshkichev/miniconda3/envs/py311/lib/python3.11/site-packages/pydantic/_internal/_fields.py:192: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dialogue2graph.pipelines.models import ModelsAPI\n",
+    "models = ModelsAPI()"
    ]
   },
   {
@@ -40,22 +49,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "INFO:datasets:PyTorch version 2.6.0 available.\n",
+      "/data/home/peshkichev/projects/chatsky-llm-autoconfig/dialogue2graph/pipelines/models.py:36: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+      "  model = ChatOpenAI(model=model_name, temperature=parameter)\n",
+      "/data/home/peshkichev/projects/chatsky-llm-autoconfig/dialogue2graph/pipelines/models.py:38: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  model = HuggingFaceEmbeddings(model_name=model_name, model_kwargs={\"device\": parameter})\n",
       "INFO:sentence_transformers.SentenceTransformer:Load pretrained SentenceTransformer: BAAI/bge-m3\n"
      ]
     }
    ],
    "source": [
     "from dialogue2graph.pipelines.d2g_algo.pipeline import Pipeline\n",
-    "filling_llm = ChatOpenAI(model=\"o3-mini\", temperature=1)\n",
-    "embedder = HuggingFaceEmbeddings(model_name=\"BAAI/bge-m3\", model_kwargs={\"device\": \"cuda:0\"})\n",
-    "pipeline = Pipeline(filling_llm, embedder)"
+    "filling_llm = models(\"llm\", name=\"o3-mini\", temp=1)\n",
+    "sim_model = models(\"similarity\", name=\"BAAI/bge-m3\", device=\"cuda:0\")\n",
+    "pipeline = Pipeline(filling_llm, sim_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filling_llm = models(\"llm\", name=\"o3-mini\", temp=1)\n",
+    "sim_model = models(\"similarity\", name=\"BAAI/bge-m3\", device=\"cuda:0\")\n",
+    "pipeline = Pipeline(filling_llm, sim_model)"
    ]
   },
   {
@@ -174,23 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sentence_transformers.SentenceTransformer:Load pretrained SentenceTransformer: BAAI/bge-m3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dialogue2graph.pipelines.d2g_llm.pipeline import Pipeline\n",
-    "grouping_llm = ChatOpenAI(model=\"chatgpt-4o-latest\", temperature=0)\n",
-    "filling_llm = ChatOpenAI(model=\"o3-mini\", temperature=1)\n",
-    "embedder = HuggingFaceEmbeddings(model_name=\"BAAI/bge-m3\", model_kwargs={\"device\": \"cuda:0\"})\n",
-    "pipeline = Pipeline(grouping_llm, filling_llm, embedder)"
+    "grouping_llm = models(\"llm\", name=\"chatgpt-4o-latest\", temp=0)\n",
+    "filling_llm = models(\"llm\", name=\"o3-mini\", temp=1)\n",
+    "sim_model = models(\"similarity\", name=\"BAAI/bge-m3\", device=\"cuda:0\")\n",
+    "pipeline = Pipeline(grouping_llm, filling_llm, sim_model)"
    ]
   },
   {
@@ -309,23 +326,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sentence_transformers.SentenceTransformer:Load pretrained SentenceTransformer: BAAI/bge-m3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dialogue2graph.pipelines.d2g_extender.pipeline import Pipeline\n",
-    "extending_llm = ChatOpenAI(model=\"chatgpt-4o-latest\", temperature=0)\n",
-    "filling_llm = ChatOpenAI(model=\"o3-mini\", temperature=1)\n",
-    "embedder = HuggingFaceEmbeddings(model_name=\"BAAI/bge-m3\", model_kwargs={\"device\": \"cuda:0\"})\n",
-    "pipeline = Pipeline(extending_llm, filling_llm, embedder)"
+    "extending_llm = models(\"llm\", name=\"chatgpt-4o-latest\", temp=0)\n",
+    "filling_llm = models(\"llm\", name=\"o3-mini\", temp=1)\n",
+    "sim_model = models(\"similarity\", name=\"BAAI/bge-m3\", device=\"cuda:0\")\n",
+    "pipeline = Pipeline(extending_llm, filling_llm, sim_model)"
    ]
   },
   {
